--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="Stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="pimg1" id="pic1">
+        <div class="ptext">
+            <span class="border">
+                welcome to parallex website
+            </span>
+        </div>
+    </div>
+    <section class="section light-section">
+        <h2>Section one </h2>
+        <p class="para">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+    </section>
+    <div class="pimg2">
+        <div class="ptext">
+            <span class="border" id="second">
+                Second Image
+            </span>
+        </div>
+    </div>
+    <section class="section dark-section">
+        <h2>Section Two </h2>
+        <p class="para">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+    </section>
+    <div class="pimg3">
+        <div class="ptext">
+            <span class="border" id="third">
+                Third Image
+            </span>
+        </div>
+    </div>
+    <section class="section dark-section">
+        <h2>Section Three </h2>
+        <p class="para">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+    </section>
+    <div class="pimg1">
+        <div class="ptext">
+            <span class="border">
+                End of parallex website
+            </span>
+        </div>
+    </div>
+
+</body>
+
+</html>
